--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
             <legend>Sexo</legend>
                 <input type="radio" name="sexo" id="im" required value="M" checked> <label for="im">Masculino</label>
