--- a/exercicios/ex025/form008.html
+++ b/exercicios/ex025/form008.html
@@ -10,7 +10,16 @@
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
-            <label for=""></label>
+            <label for="in1">Numero 1:</label>
+            <input type="number" name="n1" id="in1" required min="0" max="50" oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
+        </p>
+        <p>
+            <label for="in2">Numero 2:</label>
+            <input type="number" name="n2" id="in2" required min="0" max="50" oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)">
+        </p>
+        <p>
+            <label for="isoma">Soma:</label>
+            <output id="isoma">0</output>
         </p>
         <p>
             <input type="submit" value="Enviar">
